--- a/Truss.html
+++ b/Truss.html
@@ -39,11 +39,8 @@
 		<div id="FPSdisplay" style="position: absolute; left:10px; bottom:10px; color: white;"></div>
 
 		<script type="text/javascript">
-			var mainNode2;
-			var newMainNode;
 			var savedState = 0;
 
-			var selectedObject;
 			var protagonist;
 			var universe = new Universe(document.getElementById('mainArea'));
 
@@ -69,11 +66,6 @@
 
 				universe.tick(timestamp / 1000);
 
-				if (setupTicks>0) {
-					universe.tickAll(timestamp / 1000);
-					setupTicks--;
-				}
-				// mainNode3.tick(timestamp / 1000);
 				requestAnimationFrame(mainLoop);
 			}
 
@@ -83,12 +75,12 @@
 
 				trussBackground = document.getElementById("temp");
 
-				mainNode2 = new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode", WalkTruss);
+				let mainNode2 = new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode", WalkTruss);
 				universe.push(mainNode2);
 				universe.current.truss.initiate();
 				universe.current.resize();
 
-				mainNode3 = new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode2", WalkTruss);
+				let mainNode3 = new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode2", WalkTruss);
 				universe.push(mainNode3);
 				universe.current.truss.initiate();
 				universe.current.resize();
@@ -234,19 +226,19 @@
 				let selector = document.getElementById('tensorType');
 				let value = selector.value;
 				if (value == 'Spring') {
-					connectionTensor = universe.current.truss.addTensor(new Spring(selectedObject, universe.current.selector, 100));
+					connectionTensor = universe.current.truss.addTensor(new Spring(universe.selectedObject, universe.current.selector, 100));
 				} else if (value == 'PullSpring') {
-					connectionTensor = universe.current.truss.addTensor(new PullSpring(selectedObject,  universe.current.selector, 100));
+					connectionTensor = universe.current.truss.addTensor(new PullSpring(universe.selectedObject,  universe.current.selector, 100));
 				} else if (value == 'Absorber') {
-					connectionTensor = universe.current.truss.addTensor(new Absorber(selectedObject,  universe.current.selector, 1));
+					connectionTensor = universe.current.truss.addTensor(new Absorber(universe.selectedObject,  universe.current.selector, 1));
 				} else if (value == 'Field') {
-					connectionTensor = universe.current.truss.addTensor(new Field(selectedObject,  universe.current.selector, 0.0001));
+					connectionTensor = universe.current.truss.addTensor(new Field(universe.selectedObject,  universe.current.selector, 0.0001));
 				} else if (value == 'PictureSpring') {
-					connectionTensor = universe.current.truss.addTensor(new PictureSpring(selectedObject,  universe.current.selector, 100, 'facade.jpg', 1));
+					connectionTensor = universe.current.truss.addTensor(new PictureSpring(universe.selectedObject,  universe.current.selector, 100, 'facade.jpg', 1));
 				}
 				if (!connectionEventListener) {
 					connectionEventListener = document.addEventListener('selectionEvent', function (e) {
-						if (connectionTensor && selectedObject.isNode) {
+						if (connectionTensor && universe.selectedObject.isNode) {
 							connectionTensor.sensorAttach();
 							connectionTensor = undefined;
 						}
@@ -259,7 +251,7 @@
 			}
 
 			function addGravityCheat() {
-				universe.current.truss.addTensor(gravityField(selectedObject));
+				universe.current.truss.addTensor(gravityField(universe.selectedObject));
 			}
 
 			function deleteSelected() {
@@ -271,7 +263,7 @@
 			}
 
 			function selectMainNode() {
-				let previousSelectedObject = selectedObject;
+				let previousSelectedObject = universe.selectedObject;
 				selectedObject = universe.current;
 				let event = new CustomEvent('selectionEvent', {
 					detail: {
