--- a/Truss.html
+++ b/Truss.html
@@ -75,27 +75,30 @@
 
 				trussBackground = document.getElementById("temp");
 
+
 				let mainNode2 = new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode", WalkTruss);
-				universe.push(mainNode2);
-				universe.current.truss.initiate();
-				universe.current.resize();
+				mainNode2.truss.initiate();
+				mainNode2.resize();
+				universe.push(new World(mainNode2),[]);
 
-				let mainNode3 = new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode2", WalkTruss);
-				universe.push(mainNode3);
-				universe.current.truss.initiate();
-				universe.current.resize();
+				let mainNode3 = new TrussNode(mainNode2, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "StackNode2", WalkTruss);
+				universe.push(new World(mainNode3),[]);
+				mainNode3.truss.initiate();
+				mainNode3.resize();
 
-				let latestNode = new TrussNode(undefined, new Position(0, 0), new Vector(20, 20), 1 / 60, 1, "MainNode", WalkTruss);
-				universe.push(latestNode);
-				universe.current.truss.initiate();
-				universe.current.resize();
+				let latestNode = new TrussNode(mainNode3, new Position(0, 0), new Vector(20, 20), 1 / 60, 1, "MainNode", WalkTruss);
+				latestNode.truss.initiate();
 
-				let govenorTruss =new TrussNode(undefined, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "GovenorTruss", GovenorTruss)
-				govenorTruss.truss.initiate(protagonist);
-				govenorTruss.resize();
-				universe.governors.push(govenorTruss);
 
-				universe.setCurrent(latestNode);
+				let governorTruss =new TrussNode(latestNode, new Position(0, 0), new Vector(10, 10), 1 / 60, 1, "GovenorTruss", GovenorTruss)
+				governorTruss.truss.initiate(protagonist);
+				governorTruss.resize();
+				let governorList= [governorTruss];
+
+				let latestWorld = universe.push(new World(latestNode, governorList));
+				latestNode.resize();
+
+				universe.setCurrentWorld(latestWorld);
 
 				// universe.showUniverse(document.getElementById('mainArea'));
 
@@ -116,7 +119,7 @@
 
 				openBottomPanel(event, 'propertiesDiv');
 
-				universe.current.element.display = "none";
+				universe.currentNode.element.display = "none";
 				updateResize();
 
 			}
@@ -155,26 +158,26 @@
 				var i, tabcontent, tablinks;
 
 				// Get all elements with class="tabcontent" and hide them
-				tabcontent = universe.current.getElements('.tabcontent');
+				tabcontent = universe.currentNode.getElements('.tabcontent');
 				// document.getElementsByClassName("tabcontent");
 				for (i = 0; i < tabcontent.length; i++) {
 					tabcontent[i].style.display = "none";
 				}
 
 				// Get all elements with class="tablinks" and remove the class "active"
-				tablinks = universe.current.getElements('.tabsectionbuttons');
+				tablinks = universe.currentNode.getElements('.tabsectionbuttons');
 				//document.getElementsByClassName("tabsectionbuttons");
 				for (i = 0; i < tablinks.length; i++) {
 					tablinks[i].classList.remove("active");
 				}
 
 				// Show the current tab, and add an "active" class to the button that opened the tab
-				universe.current.getElement('#'+divName).style.display = "block";
+				universe.currentNode.getElement('#'+divName).style.display = "block";
 
 				if (evt)
 					evt.currentTarget.classList.add("active");
 				else
-				universe.current.getElement('#'+"propertiesButton").classList.add("active");
+				universe.currentNode.getElement('#'+"propertiesButton").classList.add("active");
 			}
 
 
@@ -183,7 +186,7 @@
 			 */
 			function select(selectionEvent) {
 				let select = selectionEvent.detail.selectedObject;
-				let connectionDiv= universe.current.getElement("#connectionDiv");
+				let connectionDiv= universe.currentNode.getElement("#connectionDiv");
 
 				if (!select) {
 					connectionDiv.innerHTML = '';
@@ -199,8 +202,8 @@
 				connectionDiv.innerHTML = '';
 				connectionDiv.appendChild(select.generateconnectionHTML());
 
-				let gravityButton= universe.current.getElement("#gravityButton");
-				let tensorAdder= universe.current.getElement("#tensorAdder");
+				let gravityButton= universe.currentNode.getElement("#gravityButton");
+				let tensorAdder= universe.currentNode.getElement("#tensorAdder");
 
 				if (select.isNode) {
 					gravityButton.style.display = 'inline';
@@ -215,7 +218,7 @@
 				let selector = document.getElementById('nodeType');
 				let value = selector.value;
 				if (value == 'Node') {
-					universe.current.truss.addNode(new Node(universe.current.truss, new Position(1, 1), 10, 'node'));
+					universe.currentNode.truss.addNode(new Node(universe.currentNode.truss, new Position(1, 1), 10, 'node'));
 				}
 			}
 
@@ -223,18 +226,20 @@
 			var connectionEventListener;
 
 			function makeTensor() {
-				let selector = document.getElementById('tensorType');
+				let selector = universe.currentNode.getElement('#tensorType');
 				let value = selector.value;
 				if (value == 'Spring') {
-					connectionTensor = universe.current.truss.addTensor(new Spring(universe.selectedObject, universe.current.selector, 100));
+					connectionTensor = universe.currentNode.truss.addTensor(new Spring(universe.selectedObject, universe.currentNode.selector, 100));
+				} else if (value == 'DampenedSpring') {
+					connectionTensor = universe.currentNode.truss.addTensor(new DampenedSpring(universe.selectedObject,  universe.currentNode.selector, 100));
 				} else if (value == 'PullSpring') {
-					connectionTensor = universe.current.truss.addTensor(new PullSpring(universe.selectedObject,  universe.current.selector, 100));
+					connectionTensor = universe.currentNode.truss.addTensor(new PullSpring(universe.selectedObject,  universe.currentNode.selector, 100));
 				} else if (value == 'Absorber') {
-					connectionTensor = universe.current.truss.addTensor(new Absorber(universe.selectedObject,  universe.current.selector, 1));
+					connectionTensor = universe.currentNode.truss.addTensor(new Absorber(universe.selectedObject,  universe.currentNode.selector, 1));
 				} else if (value == 'Field') {
-					connectionTensor = universe.current.truss.addTensor(new Field(universe.selectedObject,  universe.current.selector, 0.0001));
+					connectionTensor = universe.currentNode.truss.addTensor(new Field(universe.selectedObject,  universe.currentNode.selector, 0.0001));
 				} else if (value == 'PictureSpring') {
-					connectionTensor = universe.current.truss.addTensor(new PictureSpring(universe.selectedObject,  universe.current.selector, 100, 'facade.jpg', 1));
+					connectionTensor = universe.currentNode.truss.addTensor(new PictureSpring(universe.selectedObject,  universe.currentNode.selector, 100, 'facade.jpg', 1));
 				}
 				if (!connectionEventListener) {
 					connectionEventListener = document.addEventListener('selectionEvent', function (e) {
@@ -247,7 +252,7 @@
 			}
 
 			function changeDebugLevel() {
-				universe.current.truss.debugLevel = universe.current.getElement("#debugLevel").value;
+				universe.currentNode.truss.debugLevel = universe.currentNode.getElement("#debugLevel").value;
 			}
 
 			function addGravityCheat() {
@@ -255,16 +260,16 @@
 			}
 
 			function deleteSelected() {
-				if (selectedObject.isTensor) {
-					universe.current.truss.removeTensor(selectedObject);
-				} else if (selectedObject.isNode) {
-					universe.current.truss.removeNode(selectedObject);
+				if (universe.selectedObject.isTensor) {
+					universe.currentNode.truss.removeTensor(universe.selectedObject);
+				} else if (universe.selectedObject.isNode) {
+					universe.currentNode.truss.removeNode(universe.selectedObject);
 				}
 			}
 
 			function selectMainNode() {
 				let previousSelectedObject = universe.selectedObject;
-				selectedObject = universe.current;
+				selectedObject = universe.currentNode;
 				let event = new CustomEvent('selectionEvent', {
 					detail: {
 						'selectedObject': selectedObject,
@@ -278,15 +283,15 @@
 			}
 
 			function updateResize() {
-				universe.current.resize();
+				universe.currentNode.resize();
 			}
 
 			function movePropertyEdit(configAreaName) {
 				if (configAreaName == 'trussConfigArea') {
 					selectMainNode();
 				}
-				let view = universe.current.getElement("#configview");
-				let container =universe.current.getElement("#"+configAreaName);
+				let view = universe.currentNode.getElement("#configview");
+				let container =universe.currentNode.getElement("#"+configAreaName);
 				container.appendChild(view);
 			}
 
