--- a/Truss.html
+++ b/Truss.html
@@ -18,6 +18,8 @@
 	<script src="Javascript/ParameterEditor/Property.js" type="text/javascript"></script>
 	<script src="Javascript/ParameterEditor/BannerNode.js" type="text/javascript"></script>
 	<script src="Javascript/ParameterEditor/ConfigurationArea.js" type="text/javascript"></script>
+	<script src="Javascript/ParameterEditor/PropertyEditor.js" type="text/javascript"></script>
+	<script src="Javascript/ParameterEditor/PropertyUpdateNode.js" type="text/javascript"></script>
 	<script src="Javascript/Pictures.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
 
