--- a/Truss.html
+++ b/Truss.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<script src="Javascript/Primitives.js" type="text/javascript"></script>
+	<script src="Javascript/Label.js" type="text/javascript"></script>
 	<script src="Javascript/FileSave.js" type="text/javascript"></script>
 	<script src="Javascript/View.js" type="text/javascript"></script>
 	<script src="Javascript/Nodes/Node.js" type="text/javascript"></script>
