fixed truss parameters

--- a/Truss.html
+++ b/Truss.html
@@ -101,6 +101,8 @@
 
 
 				universe.setCurrentWorld(latestWorld);
+				
+				latestNode.addLabel('truss');
 
 				// universe.showUniverse(document.getElementById('mainArea'));
 
