--- a/Truss.html
+++ b/Truss.html
@@ -130,6 +130,13 @@
 
 			}
 
+		window.addEventListener('keydown', function(e) {
+			if (e.keyCode==78) {
+				makeNode();
+			} else if (e.keyCode==84) {
+				makeTensor();
+			}
+		}, true);
 
 
 			let myX = 3;
@@ -220,11 +227,19 @@
 				}
 			}
 
+			var connectionNode;
+			var connectionNodeEventListener;
+
 			function makeNode() {
 				let selector = document.getElementById('nodeType');
 				let value = selector.value;
 				if (value == 'Node') {
-					universe.currentNode.truss.addNode(new Node(universe.currentNode, new Position(1, 1), 10, 'node'));
+					let newNode=new Node(universe.currentWorld, universe.currentNode, 'node added', {
+							'localPosition': new Position(1,1),
+						});
+					universe.currentNode.truss.addNode(newNode);
+					universe.select(newNode);
+					universe.newNode=newNode;
 				}
 			}
 
@@ -232,8 +247,14 @@
 			var connectionEventListener;
 
 			function makeTensor() {
-				let selector = universe.currentNode.getElement('#tensorType');
-				let value = selector.value;
+				let selectorDropDown = universe.currentNode.getElement('#tensorType');
+				let value = selectorDropDown.value;
+				if (connectionTensor) {
+					// Some tensor is already currently being drawn
+					universe.currentNode.truss.removeTensor(connectionTensor);
+				}
+				connectionTensor=undefined;
+
 				if (value == 'Spring') {
 					connectionTensor = universe.currentNode.truss.addTensor(new Spring(universe.selectedObject, universe.currentNode.selector, 100));
 				} else if (value == 'DampenedSpring') {
@@ -250,22 +271,18 @@
 							'equilibriumLength': 6,
 							'constant': 100,
 						}));
-						// new PullSpring(universe.selectedObject,  universe.currentNode.selector, 100));
 				} else if (value == 'Absorber') {
 					connectionTensor = universe.currentNode.truss.addTensor(
 						new Tensor(universe.selectedObject, universe.currentNode.selector, 'absorber', {
 							'dampeningConstant': 1,
 						}));
-				// connectionTensor = universe.currentNode.truss.addTensor(new
-				// Absorber(universe.selectedObject,  universe.currentNode.selector, 1));
 				} else if (value == 'Field') {
 					connectionTensor = universe.currentNode.truss.addTensor(
 						new Tensor(universe.selectedObject, universe.currentNode.selector, 'field', {
 							'constant': 0.0001,
 						}));
-					// new Field(universe.selectedObject,  universe.currentNode.selector, 0.0001));
 				}
-				if (!connectionEventListener) {
+				if (connectionTensor && !connectionEventListener) {
 					connectionEventListener = document.addEventListener('selectionEvent', function (e) {
 						if (connectionTensor && universe.selectedObject.isNode) {
 							connectionTensor.sensorAttach();
