--- a/Truss.html
+++ b/Truss.html
@@ -22,6 +22,7 @@
 	<script src="Javascript/ParameterEditor/PropertyEditor.js" type="text/javascript"></script>
 	<script src="Javascript/ParameterEditor/PropertyUpdateNode.js" type="text/javascript"></script>
 	<script src="Javascript/Pictures.js" type="text/javascript"></script>
+	<script src="Javascript/Behaviour.js" type="text/javascript"></script>
 	<script src="Javascript/ExperimentalTrusses.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="../Stylefiles/Truss.css">
